<resources>
    <string name="app_name">LoginActivity</string>
    <string name="register">Register</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="fullName">Full Name</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="InvalidFullName">InvalidFullName</string>
    <string name="InvalidUserName">Invalid Username</string>
    <string name="InvalidPassword">InvalidPassword</string>
    <string name="InvalidRole">Invalid Role</string>
    <string-array name="role">
        <item>Sales</item>
        <item>Purchase</item>
        <item>Manager</item>
        <item>Admin</item>
    </string-array>
    <string-array name="unit_name">
        <item>number</item>
        <item>gram</item>
        <item>Kg</item>
        <item>ton</item>
        <item>litters</item>

    </string-array>

    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="UserAlreadyPresent">User already present</string>
    <string name="pleaseLogin">Please Login</string>
    <string name="InvalidCredential">Invalid credential</string>
    <string name="Login">Login</string>
    <string name="Category">Category</string>
    <string name="CreateCategory">Create Category</string>
    <string name="Add">Add</string>
    <string name="close">Close</string>
    <string name="EnterName">Enter Name</string>
    <string name="CategoryCreated">Category Created</string>
    <string name="CategoryAlreadyPresent">Category already present</string>
    <string name="subCategoryCreated">SubCategory Created</string>
    <string name="SubCategoryAlreadyPresent">SubCategory already present</string>
    <string name="CreateSubCategory">Create SubCategory</string>
    <string name="brandCreatedSuccess">Brand created successfully</string>
    <string name="brandAlreadyPresent">Brand alredy present</string>
    <string name="CreateBrand">Created Brand</string>
    <string name="SubCategory">Subcategory</string>
    <string name="Brand">Brand</string>
    <string name="ProductName">Product Name</string>
    <string name="unitWeightNumber">Single item weight/number</string>
    <string name="itemPerPack">No of item in pack</string>
    <string name="purchaseAmount">Purchase Amount</string>
    <string name="saleAmount">Sale amount</string>
    <string name="product_code">Product code</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="productCreated">Product Created</string>
    <string name="productAlreadyPresent">Product with same detail present in db</string>
    <string name="invalidProductName">Invalid Product Name</string>
    <string name="invalidSaleAmount">Invalid Sale Amount</string>
    <string name="invalidPurchaseAmount">Invalid Purchase Amount</string>
    <string name="invalidQuantityUnit">Invalid number of item or quantity </string>
    <string name="invalidInvidualItemQuantity">Invalid Qauntity per item</string>
    <string name="invalidProductCode">Invalid Product Code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
