<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authendication.RegistrationActivity">

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loadingBar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:visibility="gone"
            />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/loadingBar"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:padding="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"

                android:layout_gravity="center_horizontal"
                />

        <android.support.design.widget.TextInputLayout
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/reg_ed_fullName"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/reg_ed_user_name"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/reg_ed_password"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/role"
                android:layout_marginTop="20dp"
                android:id="@+id/reg_sp_role"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                >

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_bt_save"
                    android:layout_marginRight="10dp"
                    android:text="@string/save"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_marginEnd="10dp"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/reg_bt_clear"
                    android:layout_marginStart="10dp"/>
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>