<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:padding="10dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CreateCategory"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:maxLength="20"
            style="@style/CustomTextView.header"
            android:id="@+id/pro_dialog_tv_title"/>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pro_dialog_tv_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pro_dialog_tv_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            style="@style/CustomTextView.subHeader"
            android:visibility="invisible"
            />


    <android.support.design.widget.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/pro_dialog_tv_parent"

            android:id="@+id/textInputLayout"
            tools:layout_editor_absoluteY="66dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_product_name"
                android:hint="@string/EnterName"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_add"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"/>

        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_close"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>